[package]
name = "system"
version = "0.0.1"
edition = "2025"
author =  ["Ivan Ruzavin ivan.ruzavin98@gmail.com"]

[profile.release]
opt-level = 'z'
lto = true

[profile.dev]
opt-level = 0
lto = false

[dependencies]
common_header = { path = "../common_header"}
mcu_header = { path = "../mcu_header"}
system_reset = { path = "../system_reset" }