[package]
name = "drv_i2c_master"
version = "0.0.1"
edition = "2024"
author =  ["Ivan Ruzavin ivan.ruzavin98@gmail.com"]

[profile.release]
opt-level = 'z'
lto = true

[profile.dev]
opt-level = 0
lto = false

[dependencies]
drv_name = {path = "../drv_name"}
hal_i2c_master = {path = "../../../hal/lib/i2c"}