[package]
name = "drv_name"
version = "0.0.1"
edition = "2024"
author =  ["Ivan Ruzavin ivan.ruzavin98@gmail.com"]

[profile.release]
opt-level = 'z'
lto = true

[profile.dev]
opt-level = 0
lto = false

[dependencies]
hal_target = {path = "../../../hal/interface"}
hal_gpio = {path = "../../../hal/lib/gpio"}