[package]
name = "drv_one_wire"
version = "0.0.1"
edition = "2025"
author =  ["Ivan Ruzavin ivan.ruzavin98@gmail.com"]

[profile.release]
opt-level = 'z'
lto = true

[profile.dev]
opt-level = 0
lto = false

[dependencies]
drv_name = {path = "../drv_name"}
hal_one_wire = {path = "../../../hal/lib/one_wire"}