[package]
name = "drv_spi_master"
version = "0.0.1"
edition = "2024"
author =  ["Ivan Ruzavin ivan.ruzavin98@gmail.com"]

[profile.release]
opt-level = 'z'
lto = true

[profile.dev]
opt-level = 0
lto = false

[dependencies]
drv_name = {path = "../drv_name"}
hal_spi_master = {path = "../../../hal/lib/spi"}