[package]
name = "hal_gpio"
version = "0.1.0"
edition = "2024"
author =  ["Ivan Ruzavin ivan.ruzavin98@gmail.com"]

[profile.release]
opt-level = 'z'
lto = true

[profile.dev]
opt-level = 0
lto = false

[dependencies]
hal_ll = { path = "../../../targets/arm/stm32" }
hal_target = { path = "../../interface"}