[package]
name = "hal_pwm"
version = "0.0.1"
edition = "2024"
author =  ["Ivan Ruzavin ivan.ruzavin98@gmail.com"]

[profile.release]
opt-level = 'z'
lto = true

[profile.dev]
opt-level = 0
lto = false

[dependencies]
hal_ll = { path = "../../../hal_ll" }
hal_target = { path = "../../interface"}

[features]
default = ["pwm"]
pwm = ["hal_ll/tim"]