[package]
name = "hal_uart"
version = "0.0.1"
edition = "2025"
author =  ["Ivan Ruzavin ivan.ruzavin98@gmail.com"]

[profile.release]
opt-level = 'z'
lto = true

[profile.dev]
opt-level = 0
lto = false

[dependencies]
hal_ll = { path = "../../../hal_ll" }
hal_target = { path = "../../interface"}
hal_gpio = { path = "../gpio"}
system = {path = "../../../core/system"}
interrupt = {path = "../../../core/interrupt"}
ring = {path = "../../../platform/ring"}

[features]
default = ["uart"]
uart = ["hal_ll/uart"]